Tue Aug 28 11:02:08 2001  Ossama Othman  <ossama@uci.edu>

	* bin/nightlybuilds/builds.lst:

	  Renamed the GCC 3.0 build to "Debian_GCC_3.0.1." since we're
	  actually compiling with GCC 3.0.1, not GCC 3.0.  The latter has
	  bugs that prevent it from compiling ACE/TAO at the "-O3"
	  optimization level.

Tue Aug 28 10:19:18 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.i (recv_i):

	  Corrected Borland warning using a more efficient fix (i.e. less
	  function calls).

Tue Aug 28 10:36:10 2001  Chad Elliott  <elliott_c@ociweb.com>

        * bin/vxworks_modify.pl:
        * bin/perltest2cpp.pl:

          Added these scripts for use with VxWorks and the newly added TAO
          TestUtils.  These scripts modify c++ and perl to generate
          "one-button" modules for TAO testing on VxWorks.

Tue Aug 28 11:07:26 2001  Steve Huston  <shuston@riverace.com>

        * tests/MEM_Stream_Test.cpp: Be sure to close the stream from the
          client end.

Mon Aug 27 20:16:38 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/run_test.lst: Removed the MEM_Stream_Test from the daily
	  builds as they were hanging. This was causing the builds to
	  choke. I will keep Steve Huston informed on this so that he can
	  reenable them once he has fixed the test.

Mon Aug 27 18:33:59 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * bin/nightlybuilds/builds.lst (WEB):

          Removed the stray yoda part of LIST which is causing the wrong
          results to show up.

Mon Aug 27 18:14:38 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * bin/nightlybuilds/builds.lst (WEB):

          Added the IA-64 builds back again. We now have a faster machine
          running a better version of Linux.

Mon Aug 27 09:39:33 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/Timer_Queue_T.i (get_dispatch_info):
        * ace/Timer_Queue_T.h: Fixed the compile problem in VXWORKS